# roff

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.cn.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  mirror-codeberg.yml  pages.yml  release.yml  reproducible.yml  scorecard.yml
.x-cmd/: release  release-rust  release-rust.common.sh  release.common.sh
changelog/: v0.1.0.cn.md  v0.1.0.md  v0.2.0.md
docs/: _config.yml  alternatives.md  design.md  faq.md  index.md  install.md  release-process.md  subcommands.md  why.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
src/: lib.rs  main.rs
tests/: basic.rs
