[package]
name = "man_parser"
version = "0.1.0"
edition = "2021"
description = "A Rust roff parser for converting man pages to JSON/Markdown"
license = "MIT"
repository = "https://github.com/ljh-sh/roff"
keywords = ["man", "roff", "parser", "markdown"]
categories = ["text-processing", "development-tools"]

[lib]
name = "man_parser"
path = "src/lib.rs"

[[bin]]
name = "roff"
path = "src/main.rs"

[dependencies]
serde_json = "1"
