[package]
name = "roff-cli"
version = "0.1.0"
edition = "2021"
description = "Skillful man page to JSON/Markdown converter - human readable, AI-friendly"
license = "MIT"
repository = "https://github.com/ljh-sh/roff"
keywords = ["man", "roff", "parser", "markdown", "cli"]
categories = ["text-processing", "development-tools"]

[lib]
name = "roff"
path = "src/lib.rs"

[[bin]]
name = "roff"
path = "src/main.rs"

[dependencies]
serde_json = "1"
